--- a/webshop-front/src/App.css
+++ b/webshop-front/src/App.css
@@ -42,3 +42,27 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
   -moz-appearance: textfield;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* SCROLLBAR */
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 8px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
